Fixed the issue related to uneven height of bootstrap tabs, Adding media query, made footer responsive

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -4,19 +4,25 @@ footer {
     height: 100px;
   }
   .navbar-default {
-    .navbar-nav {
+    ul.list-inline{
+      float: right;
+      padding: 15px 15px;
+    }
+    .list-inline {
       >li {
         >a {
           color: $header-blue;
           font-size: 14px;
-          font-weight: bold;
+          text-decoration: none;
+          &:hover {
+            font-weight: bold;
+          }
         }
       }
     }
     .navbar-brand {
       color: $header-blue;
       font-size: 14px;
-      font-weight: bold;
     }
   }
 }
