--- a/src/scss/components/_tab.scss
+++ b/src/scss/components/_tab.scss
@@ -2,16 +2,6 @@
   width: 86%;
 }
 
-.nav-tabs>li{
-  background: $Pot-Pourri;
-}
-
-.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover{
-  background: $light-gray;
-  color: $matterhorn;
-  padding-top: 10px;
-}
-
 .tab-content {
   background: $light-gray;
   width: 220px;
@@ -38,5 +28,34 @@
   color: $header-blue;
   font-size: 16px;
   font-weight: bold;
-  line-height: 2em;
+}
+
+ul.nav-tabs{
+  height: 50px;
+}
+
+.nav-tabs>li>a{
+  -webkit-border-radius: 0 !important;
+  -moz-border-radius: 0 !important;
+  border-radius: 0 !important;
+  font-size: 18px;
+}
+
+.nav-tabs>li:not(.active)>a {
+  height: 40px;
+  background: $Pot-Pourri;
+  margin-top: 10px;
+  text-align: center;
+  color: $header-blue;
+  font-weight: 100;
+}
+
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover{
+  background: $light-gray;
+  color: $matterhorn;
+  height: 50px;
+  margin: 0px;
+  text-align: center;
+  font-weight: bold;
+  color: $black;
 }
